# wordle_varzarevsky_lindsay

./: LICENSE  README.md  pyproject.toml
wordle_lmv2141/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
wordle_lmv2141/.github/workflows/: ci-cd.yml
wordle_lmv2141/docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
wordle_lmv2141/src/wordle_lmv2141/: __init__.py  core.py
wordle_lmv2141/tests/: test_wordle_lmv2141.py
