[project]
name = "wordle-lmv2141"
version = "0.1.0"
description = "wordle project"
authors = [
    {name = "Varzarevsky_Lindsay",email = "lindsayvarzz@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
