[tool.poetry]
name = "wordle_lmv2141"
version = "0.1.0"
description = "Package  for Homework 7 - package creation"
authors = ["Lindsay Varzarevsky"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"
myst-nb = "^1.3.0"
sphinx-autoapi = "^3.6.1"
sphinx-rtd-theme = "^3.0.2"
pytest-cov = "^7.0.0"
pytest = "^8.4.2"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
